[tool.poetry]
name = "audio_utils"
version = "0.1.0"
description = "This package contain the audio utility methods"
authors = ["munikumar.mm <munikumar.m09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.47.0"
pydub = "^0.25.1"
moviepy = "^1.0.3"
indic-nlp-library = "^0.92"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
